Facelift on spellchecker module